--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
 description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://127.0.0.1
-baseurl:          ''
+url:              https://hyde.getpoole.com
+baseurl:          /
 paginate:         5
 
 # About and contact
