cambio url para probar con Hosting de DigitalOcen

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
 description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://hyde.getpoole.com
+url:              https://octopus-app-9jo9g.ondigitalocean.app/
 baseurl:          /
 paginate:         5
 
