--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
 description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://octopus-app-9jo9g.ondigitalocean.app/
-baseurl:          /
+baseurl:          ""
 paginate:         5
 
 # About and contact
