--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
 description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              https://yoncho14.github.io/
+url:              https://yoncho14.github.io
 baseurl:          ""
 paginate:         5
 
