--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Setup
 title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
-description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. '
 url:              https://yoncho14.github.io
-baseurl:          ""
+baseurl:          /
 paginate:         5
 
 # About and contact
