--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:            Yoncho
 tagline:          'A Bounty Hunter Blog'
 description:      'Bug Bounty hunter from Perú ❤️🦙🇵🇪. '
 url:              https://yoncho14.github.io
-baseurl:          ""
+baseurl:          /
 paginate:         5
 
 # About and contact
